# nr-text-adventure

./: .gitignore  CMakeLists.txt  GtkSources.cmake  README.md  Sources.cmake
data/Assets/: Events.json  NR.json
src/: Common.h  Common.hh  Main.cc  MakeConsole.hh.in
src/Adventure/: AdventureCommon.cc  AdventureCommon.hh  Event.cc  Event.hh  Game.cc  Game.hh  Map.cc  Map.hh
src/Interfaces/: Console.cc  Console.hh  Interfaces.hh.in
src/Interfaces/System/: Console.cc  Console.hh
src/Interfaces/Terminal/: Console.cc  Console.hh  GtkCommon.h  GtkCommon.hh  TerminalConsole.cc  TerminalConsole.hh  TerminalWindow.cc  TerminalWindow.hh  Window.cc  Window.hh
